force-app/main/default/objects/MFSignals__e/MFSignals__e.object-meta.xml
<CustomObject>
    <label>Mr. Flow Signal</label>
    <pluralLabel>Mr. Flow Signals</pluralLabel>
</CustomObject>