force-app/main/default/objects/MFSignals__e/fields/Conductor__c.field-meta.xml
<CustomField>
    <fullName>Conductor__c</fullName>
    <label>Conductor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>