force-app/main/default/objects/MFSignals__e/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <label>ItemId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>