force-app/main/default/objects/MFSignals__e/fields/JSONString__c.field-meta.xml
<CustomField>
    <fullName>JSONString__c</fullName>
    <label>JSONString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>