force-app/main/default/objects/MFSignals__e/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>