force-app/main/default/objects/MFSignals__e/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <label>Thread</label>
    <length>100</length>
    <type>Text</type>
</CustomField>